--- a/frontend/client/src/components/Footer.css
+++ b/frontend/client/src/components/Footer.css
@@ -7,16 +7,23 @@
     color: black;
     display: flex;
     justify-content: space-between;
-    background-image:linear-gradient(white,#EAECEE) ;
+    align-items: center;
+    background-image:linear-gradient(white,#EAECEE);
 }
-.contact {
+a.contact {
     color:black;
     text-decoration: none;
-    padding-left: 15px;
+    padding-left: 20px;
     display: flex;
     flex-direction: row;
     align-items: center;
+    margin-bottom: 16px;
 }
 .footer-p {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     margin-right: 30px;
+    font-size: 12px;
+    
 }
