--- a/frontend/client/src/components/NavBar.css
+++ b/frontend/client/src/components/NavBar.css
@@ -1,6 +1,7 @@
 .container {
   margin: 0;
   padding: 0;
+  
   background-image:linear-gradient(#EAECEE, white);
 }
 .navbar {
@@ -10,6 +11,8 @@
   align-items: center;
   height: 100%;
   width: 100vw;
+  margin: 0;
+  background-image:linear-gradient(#EAECEE, white);
 }
 .brand-name {
   color: black;
