--- a/frontend/client/src/components/Footer.css
+++ b/frontend/client/src/components/Footer.css
@@ -27,3 +27,10 @@ a.contact {
     font-size: 12px;
     
 }
+.contact {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: baseline;
+    padding-top: 10px;
+}
