--- a/frontend/client/src/pages/Landing/LandingPage.css
+++ b/frontend/client/src/pages/Landing/LandingPage.css
@@ -18,13 +18,13 @@
   height: 20em;
   opacity: 0.3;
   z-index: -1;
-  position: absolute;
-  top: 3em;
+  position: relative;
+  top: 5em;
 }
 .landp {
-  position: absolute;
+  position: relative;
   z-index: -1;
-  top: 20em;
+  top: 4em;
   opacity: 0.7;
   font-size: 20px;
 }
@@ -34,7 +34,7 @@
   justify-content: center;
   align-items: center;
   position: relative;
-  top: 33em;
+  top: 8em;
 }
 button {
   width: 6em;
